single thread options